- Fixed findbugs-detected bugs